--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
                 width: 33%;
                 height: 300;
             }
+            a{ 
+                color: #C67EFC; 
+                text-decoration: none
+            }
+            a:visited {
+                color: #B97BE8;
+            }
+            a:hover {
+                color: #AE5EEB;
+            }
         
         </style>
     </head>
