--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     
     <body>
         <a href="https://github.com/Olivia-RO/javaday30">link to source code for all projects</a>
+        <a href="https://olivia-ro.github.io/javaday30/index2">link to project 16-30</a>
         <div>
             <h3>Project 1, 2, 3</h3>
             <video width="500" height="300" controls>
